# fastapi_ai_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3b09b71e0564_add_composite_index_api_key_id_created_.py  a07ae9cb900c_create_api_keys_and_usage_tables.py
scripts/: rebuild_all.sh
src/app/: config.py  main.py
src/app/api/v1/: api_keys.py  chat.py  diagnostics.py  summarize.py  translate.py  usage.py
src/app/core/: auth.py  logging.py  rate_limit.py
src/app/models/: __init__.py  api_key.py  usage.py
src/app/schemas/: __init__.py  api_key.py  chat.py  summarize.py  translate.py  usage.py
src/app/services/: ai_provider.py  api_key_service.py  cache_service.py  openai_provider.py  openai_service.py  usage_service.py
tests/: conftest.py  test_api_keys.py  test_cache.py  test_chat.py  test_diagnostics.py  test_summarize.py  test_translate.py  test_usage.py
